# Layla

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  CAPABILITIES_AND_CHARACTER_ROADMAP.md  CHANGELOG.md  CLIENTS.md  CODE_OF_CONDUCT.md  COMPLETION_PLAN.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN-DISTRIBUTED-INFRASTRUCTURE.md  Dockerfile  Download-Jinx-Model.ps1  Download-Model.ps1  ENGINEERING_BLUEPRINT.md  EVOLUTION_ACTIVATION.md  EVOLUTION_LAYER_IMPLEMENTATION_PLAN.md  EXTENSION_IMPLEMENTATION_SUMMARY.md  FINE-TUNING.md  HANDOFF.md  INSTALL.bat  LAYLA-MODEL-PIPELINE.md  LAYLA-SETTINGS-AND-EDUCATION.md  LAYLA_NORTH_STAR.md  LICENSE  MODELS.md  OLLAMA.md  PASTE-AND-RUN.ps1  PLUGINS.md  PROJECT_BRAIN.md  README-ES.md  README.md  RELEASE-CASTILLA.md  ROADMAP.md  RUN_TEST_THEN_START.bat  SECURITY.md  (+29 more)
.cursor/: mcp.json
.cursor/rules/: layla-assistant.mdc  north-star.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  verify-deep.yml
.identity/: capabilities.md  self_model.md
.planning/: ARCHITECTURE_TARGET.md  BACKLOG.md  CASTILLA_RELEASE_PLAN.md  ENGINEERING_HEALTH.md  FULL-HISTORY.md  FULL-LIST.md  GUI-FEATURE-MAP.md  GUI-REBUILD.md  MASTER-PLAN.md  MILESTONE-friend-ready.md  PLAN.md  PROJECT.md  REMEDIATION-PLAN.md  REMEDIATION_PLAN.md  REQUIREMENTS.md  RESEARCH-DEEP.md  ROADMAP.md  STATE.md  STATUS.md  STRATEGY.md  UNIFIED-ROADMAP.md  UNITE-STATUS.md  UPGRADES.md  WATERTIGHT-PLAN.md  config.json
.planning/audit/: README.md  audit-loop.mjs  ci-gate.sh  config.json  delta-critic.md  delta-gaps.md  delta-ux-parity.md  delta-voice.md  health-recs.json  intent-ux.md  intent-vision.md  ledger.json  (+7 more)
agent/: .coveragerc  .gitignore  FINAL_SYSTEM_READINESS.md  PERSONALITY_LAYER_UNDERSTANDING.md  README.md  Start_Jinx_Terminal.ps1  Start_Layla_Terminal.ps1  agent_loop.py  background_job_worker.py  behavioral_rhythm.txt  cluster_config.json  cognitive_lens.txt  config_schema.py  conftest.py  constants.py  decision_schema.py  diagnose_startup.py  download_docs.py  execution_state.py  export_finetune_data.py  first_run.py  install-autostart.ps1  lens_refresh.py  main.py  operational_guidance.txt  orchestrator.py  personality_expression.txt  port_guard.py  probe_hardware.py  pytest.ini  requirements-e2e.txt  requirements-lock.txt  requirements.txt  research_intelligence.py  research_lab.py  research_stages.py  research_utils.py  run-layla-server.ps1  run.ps1  runtime_config.example.json  (+13 more)
benchmarks/: README.md  scorecard_qwen2.5-coder-3b-hard.json  scorecard_qwen2.5-coder-3b.json  scorecard_qwen2.5-coder-7b-hard.json  scorecard_qwen2.5-coder-7b.json
cursor-jinx-mcp/: README.md  server.py
cursor-layla-mcp/: README.md  server.py  tool_definitions.py
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
discord_bot/: README.md  __init__.py  bot.py  config.py  error_handler.py  guild_config.py  installer.py  music_resolver.py  requirements.txt  rich_embeds.py  run.py  state.py
docs/: ADAPTIVE_EXECUTION_ENGINE.md  AGENT_LOOP_MODULE_SECOND_SWEEP.md  AI_HANDOFF_REPORT.md  AI_HANDOFF_SESSION_2026-04-02.md  AI_ONBOARDING.md  ARCHITECTURE.md  AUDIT_2025-03-14.md  AUDIT_OPENCLAW_CORE_EMULATION.md  AUDIT_RUBRIC.md  AUTONOMOUS_IMPROVEMENT_PROMPT.md  BACKUP_INGESTION_AND_ELASTICSEARCH.md  CAPABILITIES.md  CAPABILITIES_MODULE_SECOND_SWEEP.md  CCUNPACKED_ALIGNMENT.md  CHAT_UI_ISSUES_REPORT.md  CODING_AGENT_WORKFLOW.md  COMPETITIVE_POSITIONING.md  CONFIG_REFERENCE.md  CORE_LOOP.md  DEBUG_AND_UPGRADE_ANALYSIS.md  DEV_TESTING.md  DISCORD_SETUP.md  ETHICAL_AI_PRINCIPLES.md  EXTERNAL_RESOURCES.md  FABRICATION_ASSIST.md  FABRICATION_IR_AND_TOOLCHAIN.md  FULL_TECHNICAL_AUDIT.md  GEOMETRY_MODULE_SECOND_SWEEP.md  GETTING_STARTED.md  GETTING_THE_MODEL.md  GOLDEN_FLOW.md  IMPLEMENTATION_STATUS.md  INTEGRATIONS_MODULE_SECOND_SWEEP.md  LANGGRAPH_ADAPTER_NOTES.md  LAYLA_MODULE_SECOND_SWEEP.md  LAYLA_PREBUILT_PLATFORM.md  LAYLA_SYSTEM_OVERVIEW.md  MCP_MODULE_SECOND_SWEEP.md  MEMORY_PRECEDENCE.md  MILESTONES.md  (+48 more)
fabrication_assist/: README.md  __init__.py
install/: INSTALL.md  Install Layla.command  bootstrap.ps1  bootstrap.sh  castilla.ps1  connect_tunnel.ps1  fresh_install.ps1
installer/: README.md  build_appimage.sh  build_installer.ps1  build_macos.sh  bundle_embedded_python.ps1  layla.iss
integrations/: README.md
knowledge/: KNOWLEDGE_LIBRARY_FULL.md  README.md  api-design-patterns.md  aspects-and-memory.md  cassandra-cognitive-biases.md  cassandra-pattern-perception.md  cassandra-voice.txt  containers-orchestration.md  devops-cicd-patterns.md  echo-behavioral-patterns.md  echo-psychology-frameworks.md  eris-creative-thinking.md  eris-music-and-narrative.md  fabrication-assist-layer.md  git-workflow-practices.md  layla-capabilities-map.md  layla-expansion-roadmap.md  layla-product-plan.md  layla-vision.md  lilith-ethics-autonomy.md  lilith-philosophy-complete.md  local-ai-models-guide.md  morrigan-engineering.md  morrigan-fabrication-geometry.md  morrigan-python-stdlib.md  nyx-research-databases.md  nyx-research.md  observability-operations.md  python-best-practices.md  rag-and-memory.md  security-engineering-basics.md  stack.txt  testing-strategy.md  tools-reference.md  troubleshooting.md
launcher/: layla.spec  layla_launcher.py
personalities/: cassandra.json  echo.json  eris.json  lilith.json  morrigan.json  neuro.json  nyx.json
plugins/: README.md
readme-assets/: README.md
repo_state/: MASTER_ANALYSIS.md
scripts/: benchmark_coding.py  build_gpt_context_pack.py  build_launcher.py  capture_readme_assets.py  check_copyleft.py  extract_agent_task_runner.py  fetch_knowledge.py  hardware_detect.py  model_selector.py  pair.py  run_layla.py  selftest.py  setup_layla.py  setup_test_env.ps1  split_db_core.py  split_db_domains.py  split_db_phase3a.py  split_registry_impl.py  trim_agent_router.py
skills/: README.md
transports/: README.md  __init__.py  base.py  slack_bot.py  telegram_bot.py
(+1412 files in other folders)
