[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layla"
version = "1.3.0"
description = "A local-first, multi-aspect AI companion and engineering agent"
readme = "README.md"
license = { file = "LICENSE" }
# 3.13+ not validated (Chroma/torch/sentence-transformers stack); use 3.11 or 3.12 only.
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Layla Author(s)" },
]
keywords = ["ai", "agent", "llm", "local", "companion", "llama-cpp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: Free for non-commercial use",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["agent", "fabrication_assist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
  "E501",   # line too long (handled by formatter)
  "F401",   # imported but unused (some intentional re-exports)
  "E741",   # ambiguous variable name (used in math-heavy code)
  "E402",   # module import order is intentionally non-top-level in some startup paths
]

[tool.ruff.lint.per-file-ignores]
"agent/tests/*" = ["F811"]   # redefined-while-unused (fixture names)
"agent/tests/test_fabrication_assist*.py" = ["E402"]   # sys.path bootstrap before repo imports

[tool.pytest.ini_options]
testpaths = ["agent/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "slow: tests that take noticeably longer",
  "e2e_ui: Playwright browser tests against live uvicorn (install requirements-e2e.txt + playwright browsers)",
]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
  "ignore:pytest.PytestConfigWarning",
]

[tool.setuptools.packages.find]
where = [".", "agent"]
include = [
    "fabrication_assist*",
    "layla*",
    "routers*",
    "services*",
    "capabilities*",
    "install*",
    "skills*",
]
exclude = ["tests", "tests.*"]
