[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layla"
version = "1.3.0"
description = "A local-first, multi-aspect AI companion and engineering agent"
readme = "README.md"
license = { file = "LICENSE" }
# 3.13+ not validated (Chroma/torch/sentence-transformers stack); use 3.11 or 3.12 only.
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Layla Author(s)" },
]
keywords = ["ai", "agent", "llm", "local", "companion", "llama-cpp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: Free for non-commercial use",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

# ---------------------------------------------------------------------------
# Optional dependency groups: `pip install layla[core]` or `pip install layla[all]`
# Core is the minimum for agent chat + memory. Other groups add capabilities.
# ---------------------------------------------------------------------------
[project.optional-dependencies]
core = [
    # Web framework
    "fastapi>=0.115,<1",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.32,<1",
    "python-multipart>=0.0.9",
    # HTTP
    "httpx>=0.27",
    "requests>=2.31",
    "tenacity>=8.2",
    # Database & storage
    "sqlite-utils>=3.35",
    "diskcache>=5.6",
    # Embeddings & RAG (integral to memory system)
    "sentence-transformers>=3.0,<4",
    "chromadb>=0.6.0,<1",
    "langchain-text-splitters>=0.3,<1",
    "rank-bm25>=0.2",
    "torchao>=0.6",
    "tiktoken>=0.7",
    # Essentials
    "numpy>=1.24,<3",
    "psutil>=5.9",
    "apscheduler>=3.10,<4",
    "networkx>=3.0",
    "orjson>=3.9",
    "PyYAML>=6.0",
    "unidiff>=0.7",
    "Pillow>=10.0",
]
llm = [
    "llama-cpp-python>=0.3.1,<0.4",
    "litellm>=1.40.0",
    "instructor>=1.0,<2",
]
voice = [
    "faster-whisper>=1.0",
    "kokoro-onnx>=0.3",
    "soundfile>=0.12",
]
vision = [
    "easyocr>=1.7",
]
crawl = [
    "trafilatura>=1.6",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
]
research = [
    "PyMuPDF>=1.24",
    "pypdf>=4.0",
    "wikipedia>=1.4",
    "duckduckgo-search>=6.0",
    "arxiv>=2.1",
    "pandas>=2.0,<3",
    "nbformat>=5.10",
]
data = [
    "duckdb>=0.10",
    "yfinance>=0.2",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "sympy>=1.12",
    "feedparser>=6.0",
]
docs = [
    "python-docx>=1.1",
    "openpyxl>=3.1",
]
viz = [
    "matplotlib>=3.8",
]
nlp = [
    "keybert>=0.8",
    "deep-translator>=1.11",
]
security = [
    "bandit>=1.7",
]
tui = [
    "textual>=0.40",
]
network = [
    "zeroconf>=0.131",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]
all = [
    "layla[core,llm,voice,vision,crawl,research,data,docs,viz,nlp,security,tui,network]",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["agent", "fabrication_assist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
  "E501",   # line too long (handled by formatter)
  "F401",   # imported but unused (some intentional re-exports)
  "E741",   # ambiguous variable name (used in math-heavy code)
  "E402",   # module import order is intentionally non-top-level in some startup paths
]

[tool.ruff.lint.per-file-ignores]
"agent/tests/*" = ["F811"]   # redefined-while-unused (fixture names)
"agent/tests/test_fabrication_assist*.py" = ["E402"]   # sys.path bootstrap before repo imports

[tool.pytest.ini_options]
testpaths = ["agent/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "slow: tests that take noticeably longer",
  "e2e_ui: Playwright browser tests against live uvicorn (install requirements-e2e.txt + playwright browsers)",
]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
  "ignore:pytest.PytestConfigWarning",
]

[tool.setuptools.packages.find]
where = [".", "agent"]
include = [
    "fabrication_assist*",
    "layla*",
    "routers*",
    "services*",
    "capabilities*",
    "install*",
    "skills*",
]
exclude = ["tests", "tests.*"]
